[project]
name = "pisensor"
version = "0.1.0"
description = ""
authors = [
    {name = "好耶！",email = "86039582+cloudw233@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "websockets (>=15.0.1,<16.0.0)",
    "orjson (>=3.10.16,<4.0.0)",
    "smbus (>=1.1.post2,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
